# my-sys-script

./: .gitignore  openvpn_boot.py  openvpn_ctrl
net-check/: Cargo.toml  demo.yml
net-check/src/: main.rs
