[package]
name = "net-check"
version = "0.1.0"
authors = ["yydcnjjw <yydcnjjw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
clap = "3.0.0-beta.2"
thiserror = "1.0"
futures = "0.3"
run_script = "^0.6.3"